--- a/package.json
+++ b/package.json
@@ -8,6 +8,13 @@
   "dependencies": {
     "next": "latest",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-typing-effect": "^2.0.5",
+    "url-loader": "^4.1.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.12",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.0"
   }
 }
