--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "next": "latest",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-draggable": "^4.4.5",
     "react-typing-effect": "^2.0.5",
     "url-loader": "^4.1.1"
   },
