WIP: w95 desktop, start menu and browser first implementation

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,9 @@ yarn-error.log*
 .env.development.local
 .env.test.local
 .env.production.local
+
+#temp backups and olde versions
+techstack.bk
+
+#unused resources
+/public/images/w95/Windows 95 ALL ICONS v1.1
