--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-draggable": "^4.4.5",
+    "react-progressbar": "^15.4.1",
     "react-typing-effect": "^2.0.5",
     "url-loader": "^4.1.1"
   },
